style.css
:root {
  --option-container-width: 10rem;
}

body {
    background-color: #fafafa;
    line-height: 1.6;
    overflow-x: hidden;
  }

  .lead {
    font-size: 1.5rem;
    font-weight: 300;
  }

  .container {
    margin: 150px auto;
    max-width: 960px;
  }

  .output {
    background: #E5E7EB;
    padding: 2rem 1rem;
    border-radius: 5px;
    margin: 2rem auto;
    font-size: 1.5rem;
  }


#add-card {
    font-size: 1.5rem;
    font-weight: bold;
    bottom: 20px; 
    right: 20px;
}

#checkbox-list {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
  }

   .doodle-container {
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 10px;
    margin: 5px;
    background-color: #fefefe;
    transition: all .2s ease;
    width: var(--option-container-width);
  }
  
  .doodle-container:hover:not(.expired-container) {
    cursor: pointer;
    background-color: #d9e8fd;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }

  .center {
    position: relative;
  }
  
  .doodle-checkbox {
    display: block;
    position: absolute;
    cursor: pointer;
    font-size: 14px;
    user-select: none;
    left: 50%;
    margin-left: -12.5px;
  }
  
  .doodle-checkbox input[type="checkbox"] {
    position: absolute;
    opacity: 0;
    height: 0;
    width: 0;
  }
  
  .custom-checkbox {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
    border: 1px solid #ccc;
    border-radius: 3px;
  }
    
  .doodle-checkbox input:checked ~ .custom-checkbox {
    background-color: #4CAF50;
    border: 1px solid #4CAF50;
  }
  
  .custom-checkbox:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  .doodle-checkbox input:checked ~ .custom-checkbox:after {
    display: block;
  }
  
  .doodle-checkbox .custom-checkbox:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
  }
  
  .doodle-container .option-text {
    padding-top: 30px;
    text-align: center;
  }


  .start:hover, .end:hover {
    cursor: pointer;
    background-color: #d9e8fd;
    transition: all .2s ease;
  }

  .timepicker {
    text-align:center !important;
  }

  #userName-wrapper {
    margin: 2rem 0rem 2rem 0rem !important;
  }

hr {
  color: rgb(128 128 128);
}




.overlay {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0; /* hide initially */
  transition: all .2s ease;
}

.option-container {
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 10px;
  margin: 5px;
  background-color: #fefefe;
  transition: all .2s ease;
  position: relative; /* needed for absolute positioning */
  user-select: none;
}

.option-text {
  text-align: center;
}

.option-container:hover {
  color: transparent;
  cursor: pointer;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.option-container:hover .overlay {
  opacity: 1;
}
  
.votes-label-wrapper {
  display: flex;
  justify-content: flex-start;
  margin-top: 10px;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: white;
  padding: 10px;
  margin: 5px;
  max-width: 100%;
}

.expired-container:hover {
  cursor: not-allowed;
  background-color: #fefefe;
  box-shadow: none;
}

.expired-checkbox:hover {
  cursor: not-allowed;
}
.voter-label {
  display: block;
  max-width: 6rem;
  font-weight: bold;
  font-size: 0.8rem;
  background-color: blue;
  color: white;
  padding: 2px 7px;
  border-radius: 25px;
  margin-bottom: 4px;
  text-align: center;
  margin-left: 4px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  opacity: 0.8;
}

#options-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}

.doodle-wrapper {
  margin-bottom: -14px;
}

.info {
  z-index: 11;
  display: none;
  min-width: 95%;
  background-color: white;
  box-shadow: 0px 0px 8px #929292;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding: 1.5rem 1rem;
  position: fixed;
  transform: translate(-50%, -43%);
  left: 50%;
  top: 33%;
}

.infobutton {
  cursor: pointer;
  z-index: 10;
  width: 1.4rem;
  height: 1.4rem;
  background-color: #0d6efd;
  color: white;
  font-size: 0.9rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 400;
  border-radius: 100%;
  position: relative;
  transform: translate(12px, 31px);
}

.closeInfobox {
  border: none;
  height: 1.5rem;
  width: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 4px;
  color: gray;
  background: white;
  position: absolute;
  border-top: none;
  border-right: none;
  border-left: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  border-bottom-left-radius: 6px;
  box-shadow: -1px 1px 2px #ebebeb;
  right: 0px;
  top: 0px;
  padding-bottom: 5px;
}

.infobox-title {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.detailCategory {
  font-weight: bold;
}

@media only screen and (min-width: 600px) {
  .info {
    width: 30rem;
    min-width: 30rem;
  }
}

.highlight-most-voted {
  border: 3px solid green;
}

.spinner-border {
  z-index: 100;
  display: block;
  position: fixed;
  top: 30%;
  left: 50%;
}

